--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -56,18 +56,49 @@
       transform: translateY(-3px); /* account for the height of the clock hands */
     }
 
-    .hand {
-      width: 50%;
-      height: 6px;
-      background: black;
-      position: absolute;
-      top: 50%;
-    }
-
+	.hand {
+        width: 50%;
+        height: 6px;
+        background: black;
+        position: absolute;
+        top: 50%;
+        transform-origin: 100%;
+        transform: rotate(90deg);
+        transition: all 0s;
+        transition-timing-function: cubic-bezier(0, 2.4, 1, 1);
+	}
   </style>
 
   <script>
+    
+    const secondHand = document.querySelector('.second-hand');
+    const minuteHand = document.querySelector('.min-hand');
+    const hourHand = document.querySelector('.hour-hand');
 
+    function setDate() {
+
+        const now = new Date();
+
+        const seconds = now.getSeconds();
+        const secondsDegrees = ((seconds / 60) * 360) + 90;
+        secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+        console.log(seconds + " secs");
+        console.log("seconds in degrees: " + secondsDegrees  + " degs");
+
+        const minutes = now.getMinutes();
+        const minutesDegrees = ((minutes / 60) * 360) + 90;
+        minuteHand.style.transform = `rotate(${minutesDegrees}deg)`;
+        console.log(minutes + " mins");
+        console.log("minutes in degrees: " + minutesDegrees + " degs");
+
+        const hours = now.getHours();
+        const hoursDegrees = ((hours / 60) * 360) + 90 - 90; //-90 again to convert to SGT
+        hourHand.style.transform = `rotate(${hoursDegrees}deg)`;
+        console.log(hours + " hours");
+        console.log("hours in degrees: " + hoursDegrees + " degs");
+    }
+
+    setInterval(setDate, 1000);
 
   </script>
 </body>
